--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.76.1",
     "lucide-react": "^0.548.0",
     "next": "^13.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.65.0"
+    "react-hook-form": "^7.65.0",
+    "resend": "^6.2.2"
   },
   "devDependencies": {
     "@types/node": "24.9.1",
