--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
   "name": "purpose-housing",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.76.1",
-    "lucide-react": "^0.548.0",
-    "next": "^16.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.65.0",
-    "resend": "^6.2.2"
+    "@supabase/supabase-js": "^2.45.0",
+    "autoprefixer": "^10.4.21",
+    "lucide-react": "^0.424.0",
+    "next": "14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
+    "resend": "^3.5.0"
   },
   "devDependencies": {
-    "@types/node": "24.9.1",
-    "@types/react": "19.2.2",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.3.0",
-    "typescript": "5.9.3"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
